--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-    <h1>SithCult League Live Ranking</h1>
+    <h1>ML League Live Ranking</h1>
 </header>
 
 <table>
@@ -31,7 +31,7 @@
 <br>
 <footer>
     <div class="footerDiv">
-    Created by us3r<br>
+    Created by frafael-02<br>
         Data from livefpl
     </div>
 </footer>
